--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "amazon-cognito-identity-js": "^6.1.1",
     "aws-amplify": "^5.0.7",
+    "axios": "^1.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
