--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "amazon-cognito-identity-js": "^6.1.1",
     "aws-amplify": "^5.0.7",
-    "axios": "^1.2.1",
+    "axios": "1.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +23,6 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "4.0.5"
   }
 }
