--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "photogame-react-typescript",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "cjs",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^6.1.1",
@@ -20,9 +21,15 @@
     "sass": "^1.57.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.9.3",
     "vite": "4.0.5",
     "vite-plugin-svgr": "^4.2.0"
