--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
-    "vite": "4.1.5",
+    "vite": "5.1.0-beta.2",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
