--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,13 +12,8 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.17
-      - 
-        name: Build with Maven
-        run: mvn clean install
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       -
         name: Set up Docker Build
         uses: docker/setup-buildx-action@v1
