--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-#VITE_BACKEND_URL=http://localhost:8080/api/v1/data
+VITE_BACKEND_URL=http://photo-game-backend-api.default.svc.cluster.local:8080/api/v1/data
