--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 #VITE_BACKEND_URL=http://192.168.1.241:8080/api/v1/data
 #VITE_BACKEND_URL=http://photo-game-backend-api.default.svc.cluster.local:8080/api/v1/data
-VITE_BACKEND_URL=http://:8080/api/v1/data
+VITE_BACKEND_URL=http://10.152.183,123:8080/api/v1/data
 #VITE_BACKEND_URL=http://localhost:8080/api/v1/data
